# smartshop-backend

./: .audit-real.txt  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  nightly.yml
docs/: automation.md  ci.md  cron.md  feedback-auswertung.md  feedback-auswertung.py  matching-woerterbuch-eval.py  matching-woerterbuch.json  rewe-cert.md  tagging.md
docs/scrapers/: README.md
scripts/: de.smartshop.nightly.plist  env.example  fetch-all.sh  install-launchd.sh  nightly.sh
src/: api.rs  db.rs  enrich.rs  lib.rs  main.rs  matching.rs  models.rs  prune.rs  push.rs  storage.rs  stores.rs  sync.rs  units.rs
src/scrapers/: aldi_nord.rs  aldi_sued.rs  edeka.rs  kaufland.rs  lidl.rs  lidl_prospekt.rs  mod.rs  netto.rs  penny.rs  rewe.rs  store_finder.rs  util.rs
src/web/: html.rs  mod.rs  svg.rs
supabase/: migration_regions.sql  migration_v10_match_key.sql  migration_v11_region_insert_hardening.sql  migration_v2.sql  migration_v3_multi_region.sql  migration_v4_region_trigger.sql  migration_v5_image_url.sql  migration_v6_storage_bucket.sql  migration_v7_price_history.sql  migration_v8_market_geo.sql  migration_v9_trigger_plz.sql  schema.sql  setup_full.sql
tests/: api.rs  cli.rs  enrich.rs  push.rs  scrapers.rs  sync.rs  web.rs
tests/fixtures/aldi_nord/: angebote.html
tests/fixtures/aldi_sued/: product_search.json
tests/fixtures/edeka/: angebote.html
tests/fixtures/kaufland/: uebersicht.html
tests/fixtures/lidl/: marktguru_offers.json  prospekt_flyer.json  prospekt_llm_response.txt  search_store1.json  search_store_branch.json
tests/fixtures/netto/: filialangebote_1.html
tests/fixtures/penny/: offers_kuehlregal.json
tests/fixtures/rewe/: discounts.json
tests/fixtures/store_finder/: nominatim_plz.json  uberall_empty.json  uberall_error.json  uberall_far.json  uberall_hit.json  virtualearth_empty.json  virtualearth_hit.json  virtualearth_hit_no_name.json
