[package]
name = "smartshop"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
scraper = "0.20"
regex = "1.13.1"
