[package]
name = "smartshop"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
# preserve_order: der Marken-Fallback in matching.rs nimmt den ERSTEN Treffer
# in Wörterbuch-Reihenfolge — sortierte Maps würden andere Tags liefern.
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
scraper = "0.20"
axum = "0.8"
regex = "1.13.1"
sha2 = "0.10"
